--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alula adalah tempat percetakan online terbaik di jakarta yang berdedikasi untuk menghadirkan solusi cetak berkualitas tinggi dengan inovasi dan ketepatan."/>
+    <meta name="google-site-verification" content="xJq5LZDkKzd0Mil2lc9xiPHzIBPvRzuq9PbZIonUhBU" />
     <title>Alula Printing Online | Cetak Digital Mudah</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
