--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alula adalah tempat percetakan online terbaik di jakarta yang menghadirkan solusi cetak berkualitas tinggi dan berkualitas"/>
-    <title>Alula Printing Online | Cetak Digital Mudah</title>
+    <meta name="keywords" content="alula printhing, alula printing online, tempat print jakarta pusat, pelayanan cetak digital">
+    <meta name="google-site-verification" content="xJq5LZDkKzd0Mil2lc9xiPHzIBPvRzuq9PbZIonUhBU" />
+    <title>Alula Printing - Pelayanan Cetak Digital </title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
