--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Alula adalah tempat percetakan online terbaik di jakarta yang menghadirkan solusi cetak berkualitas tinggi dan berkualitas"/>
+    <meta name="description" content="Alula adalah tempat percetakan online terbaik di jakarta pusat yang menghadirkan solusi cetak berkualitas tinggi"/>
     <meta name="keywords" content="alula printhing, alula printing online, tempat print jakarta pusat, pelayanan cetak digital">
     <meta name="google-site-verification" content="xJq5LZDkKzd0Mil2lc9xiPHzIBPvRzuq9PbZIonUhBU" />
     <title>Alula Printing - Pelayanan Cetak Digital </title>
